# cloudguard-automator

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
cloudguard_automator/: __init__.py  __main__.py  cli.py  control_mapping.py  demo.py  models.py  remediation.py  report.py  risk.py  scanner.py
cloudguard_automator/checks/: __init__.py  cloudtrail.py  iam.py  s3.py  security_groups.py
docs/: aws_permissions.md  control_mapping.md  live_scan_validation.md
reports/: sample_report.html  sample_report.md
terraform/lab/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_cloudtrail_checks.py  test_control_mapping.py  test_iam_checks.py  test_remediation.py  test_report.py  test_risk.py  test_s3_checks.py  test_security_groups.py
