[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudguard-automator"
version = "0.1.0"
description = "AWS cloud security posture scanner and automation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
cloudguard = "cloudguard_automator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["cloudguard_automator*"]
